tests/baselines/reference/moduleResolution_automaticTypeDirectiveNames.errors.txt
/a.ts(1,1): error TS2304: Cannot find name 'a'.


==== /a.ts (1 errors) ====
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
    
==== /node_modules/@types/.a/index.d.ts (0 errors) ====
    declare const a: number;
    
==== /node_modules/@types/a/index.d.ts (0 errors) ====
    declare const a: string;
    